force-app/main/default/objects/Izin_Belgesi__c/Izin_Belgesi__c.object-meta.xml
<CustomObject>
    <label>Izin Belgesi</label>
    <nameField>
        <displayFormat>i-{0000}</displayFormat>
        <label>Izin Belgesi Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Izin Belgeleri</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>