force-app/main/default/objects/Izin_Belgesi__c/fields/Dosya_Durumu__c.field-meta.xml
<CustomField>
    <fullName>Dosya_Durumu__c</fullName>
    <formula>IF( TODAY()&lt;Ise_Baslama_Tarihi__c  , &apos;Acik&apos;, &apos;Kapali&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dosya Durumu</label>
    <type>Text</type>
</CustomField>