force-app/main/default/objects/Izin_Belgesi__c/fields/Ise_Baslama_Tarihi__c.field-meta.xml
<CustomField>
    <fullName>Ise_Baslama_Tarihi__c</fullName>
    <formula>CASE(  RecordType.Name, &apos;Yillik Izin&apos;, ( Izinden_Donus_Tarihi__c  + 1),&apos;Rapor&apos;,( Rapor_Biti_Tarihi__c ),&apos;Mazeret Izni&apos;, ( Izinden_Donus_Tarihi__c  + 1), Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ise Baslama Tarihi</label>
    <type>Date</type>
</CustomField>