force-app/main/default/objects/Izin_Belgesi__c/fields/Izin_Suresi__c.field-meta.xml
<CustomField>
    <fullName>Izin_Suresi__c</fullName>
    <formula>Izinden_Donus_Tarihi__c - Izine_Cikis_Tarihi__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Izin Suresi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>