force-app/main/default/objects/Izin_Belgesi__c/fields/Izinden_Donus_Tarihi__c.field-meta.xml
<CustomField>
    <fullName>Izinden_Donus_Tarihi__c</fullName>
    <label>Izinden Donus Tarihi</label>
    <type>Date</type>
</CustomField>