force-app/main/default/objects/Izin_Belgesi__c/fields/Izine_Cikis_Tarihi__c.field-meta.xml
<CustomField>
    <fullName>Izine_Cikis_Tarihi__c</fullName>
    <label>Izine Cikis Tarihi</label>
    <type>Date</type>
</CustomField>