force-app/main/default/objects/Izin_Belgesi__c/fields/Kalan_Sure__c.field-meta.xml
<CustomField>
    <fullName>Kalan_Sure__c</fullName>
    <formula>CASE(  RecordType.Name  , 

&apos;Rapor&apos;, IF( (Rapor_Biti_Tarihi__c  - TODAY())&gt;=0 , Rapor_Biti_Tarihi__c  - TODAY(), 0) , 

&apos;Yillik Izin&apos;, IF( ( Izinden_Donus_Tarihi__c   - TODAY())&gt;=0 , Izinden_Donus_Tarihi__c - TODAY(), 0),

&apos;Mazeret Izni&apos;, IF( ( Izinden_Donus_Tarihi__c   - TODAY())&gt;=0 , Izinden_Donus_Tarihi__c - TODAY(), 0),
Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kalan Sure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>