force-app/main/default/objects/Izin_Belgesi__c/fields/Rapor_Baslangic_Tarihi__c.field-meta.xml
<CustomField>
    <fullName>Rapor_Baslangic_Tarihi__c</fullName>
    <label>Rapor Baslangic Tarihi</label>
    <type>Date</type>
</CustomField>