force-app/main/default/objects/Izin_Belgesi__c/fields/Rapor_Biti_Tarihi__c.field-meta.xml
<CustomField>
    <fullName>Rapor_Biti_Tarihi__c</fullName>
    <label>Rapor Bitiş Tarihi</label>
    <type>Date</type>
</CustomField>