force-app/main/default/objects/Izin_Belgesi__c/fields/Rapor_S_resi__c.field-meta.xml
<CustomField>
    <fullName>Rapor_S_resi__c</fullName>
    <formula>Rapor_Biti_Tarihi__c  -  Rapor_Baslangic_Tarihi__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rapor Süresi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>