force-app/main/default/objects/Izin_Belgesi__c/fields/Raporu_Veren_Kurum_Ad__c.field-meta.xml
<CustomField>
    <fullName>Raporu_Veren_Kurum_Ad__c</fullName>
    <label>Raporu Veren Kurum Adı</label>
    <length>30</length>
    <type>Text</type>
</CustomField>