force-app/main/default/objects/Izin_Belgesi__c/recordTypes/Mazeret_Izni.recordType-meta.xml
<RecordType>
    <fullName>Mazeret_Izni</fullName>
    <active>true</active>
    <label>Mazeret Izni</label>
</RecordType>