force-app/main/default/objects/Izin_Belgesi__c/recordTypes/Rapor.recordType-meta.xml
<RecordType>
    <fullName>Rapor</fullName>
    <active>true</active>
    <label>Rapor</label>
</RecordType>