force-app/main/default/objects/Izin_Belgesi__c/recordTypes/Senelik_Izin.recordType-meta.xml
<RecordType>
    <fullName>Senelik_Izin</fullName>
    <active>true</active>
    <label>Senelik Izin</label>
</RecordType>