force-app/main/default/objects/Izin_Belgesi__c/validationRules/Izin_Suresi.validationRule-meta.xml
<ValidationRule>
    <fullName>Izin_Suresi</fullName>
    <active>true</active>
    <errorConditionFormula>(Izinden_Donus_Tarihi__c - Izine_Cikis_Tarihi__c)&gt;30</errorConditionFormula>
    <errorMessage>Tek seferde 30 günden fazla izin kullanılamaz</errorMessage>
</ValidationRule>