force-app/main/default/objects/Izin_Belgesi__c/validationRules/Tarih_Belirsizligi.validationRule-meta.xml
<ValidationRule>
    <fullName>Tarih_Belirsizligi</fullName>
    <active>true</active>
    <errorConditionFormula>OR( Izinden_Donus_Tarihi__c  &lt;= Izine_Cikis_Tarihi__c  , Rapor_Baslangic_Tarihi__c &gt;= Rapor_Biti_Tarihi__c )</errorConditionFormula>
    <errorMessage>Başlangıç tarihi bitiş tarihinden büyük olamaz</errorMessage>
</ValidationRule>